moving to java 11

--- a/JavaBDD/pom.xml
+++ b/JavaBDD/pom.xml
@@ -6,6 +6,12 @@
   <artifactId>javabdd</artifactId>
   <name>JavaBDD</name>
 
+  <properties>
+      <maven.compiler.source>11</maven.compiler.source>
+      <maven.compiler.target>11</maven.compiler.target>
+  </properties>
+
+
   <version>1.0b2</version>
   <organization>
     <name>John Whaley</name>
